<resources>
    <string name="app_name">FSMApp</string>
    <string name="alarm_state">Alarm State :</string>
    <string name="lock">LOCK</string>
    <string name="unlock">UNLOCK</string>
    <string name="lockx2">LOCKx2</string>
    <string name="unlockx2">UNLOCKx2</string>
    <string name="initial_state">AlarmDisarmed_AllUnlocked</string>
    <string name="action">action</string>
    <string name="start_state">startState</string>
    <string name="end_state">endState</string>
</resources>
